--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Sora:wght@100;300&display=swap');
 .active{
     @apply border-blue-700
 }
