Deploy: Aplicación React compilada con todas las páginas funcionando

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,20 +5,20 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Agencia de Marketing Digital" />
+    <meta name="description" content="Node.ec - Industria 4.0, Visión por Computadora e IoT" />
     <link rel="apple-touch-icon" href="/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>Agencia de Marketing</title>
+    <title>NODE.EC - Industria 4.0</title>
     
     {% load static %}
     <!-- CSS estáticos de React -->
-    <link href="{% static 'css/main.c45e9e10.css' %}" rel="stylesheet">
+    <link href="{% static 'css/main.bf77ca54.css' %}" rel="stylesheet">
 </head>
 <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
     <div id="root"></div>
     
     <!-- JavaScript estáticos de React -->
-    <script src="{% static 'js/main.0d651f57.js' %}"></script>
+    <script src="{% static 'js/main.c6b8fd0a.js' %}"></script>
 </body>
 </html>
