Mejora en la responsividad y fondo three.js

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,17 @@
     <meta name="description" content="Node.ec - Industria 4.0, Visión por Computadora e IoT" />
     <title>NODE.EC - Industria 4.0</title>
     
-    <!-- CSS de React - nombres actualizados del manifest -->
-    <link href="/static/css/main.c5cf82aa.css" rel="stylesheet">
+    {% load static %}
+    
+    <!-- CSS de React -->
+    <link href="{% static 'css/main.bf77ca54.css' %}" rel="stylesheet">
 </head>
 <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
     
     <div id="root"></div>
     
-    <!-- JavaScript de React - nombres actualizados del manifest -->
-    <script src="/static/js/main.972b3853.js"></script>
+    <!-- JavaScript de React -->
+    <script src="{% static 'js/main.c6b8fd0a.js' %}"></script>
 </body>
 </html>
