feat: rebuild React with Three.js and update template with new build files (197.67 kB)

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,15 @@
     <meta name="description" content="Node.ec - Industria 4.0, Visión por Computadora e IoT" />
     <title>NODE.EC - Industria 4.0</title>
 
-    <!-- CSS de React - nombres actualizados del manifest -->
-    <link href="/static/css/main.c5cf82aa.css" rel="stylesheet">
+    <!-- CSS de React - build con Three.js -->
+    <link href="/static/css/main.c1c5a591.css" rel="stylesheet">
 </head>
 <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
     
     <div id="root"></div>
     
-    <!-- JavaScript de React - nombres actualizados del manifest -->
-    <script src="/static/js/main.972b3853.js"></script>
+    <!-- JavaScript de React - build con Three.js (197.67 kB) -->
+    <script src="/static/js/main.1e97f44e.js"></script>
 </body>
 </html>
