--- a/templates/index.html
+++ b/templates/index.html
@@ -6,16 +6,18 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Node.ec - Industria 4.0, Visión por Computadora e IoT" />
     <title>NODE.EC - Industria 4.0</title>
-
-    <!-- CSS de React - build con Three.js -->
-    <link href="/static/css/main.c1c5a591.css" rel="stylesheet">
+    
+    {% load static %}
+    
+    <!-- CSS de React -->
+    <link href="{% static 'css/main.bf77ca54.css' %}" rel="stylesheet">
 </head>
 <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
     
     <div id="root"></div>
     
-    <!-- JavaScript de React - build con Three.js (197.67 kB) -->
-    <script src="/static/js/main.1e97f44e.js"></script>
+    <!-- JavaScript de React -->
+    <script src="{% static 'js/main.c6b8fd0a.js' %}"></script>
 </body>
 </html>
