--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     {% load static %}
     
     <!-- CSS de React -->
-    <link href="{% static 'css/main.bf77ca54.css' %}" rel="stylesheet">
+    <link href="{% static 'static/css/main.3498c417.css' %}" rel="stylesheet" type="text/css">
 </head>
 <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
@@ -18,6 +18,6 @@
     <div id="root"></div>
     
     <!-- JavaScript de React -->
-    <script src="{% static 'js/main.c6b8fd0a.js' %}"></script>
+    <script src="{% static 'static/js/main.824999e9.js' %}" type="application/javascript"></script>
 </body>
 </html>
