--- a/templates/index.html
+++ b/templates/index.html
@@ -9,15 +9,30 @@
     
     {% load static %}
     
-    <!-- CSS de React con hash de producción -->
-    <link href="{% static 'css/main.3498c417.css' %}" rel="stylesheet" type="text/css">
+    <!-- CSS de React - DINÁMICO: se actualiza automáticamente -->
+    {% if react_css %}
+        <link href="{% static react_css %}" rel="stylesheet" type="text/css">
+    {% else %}
+        <!-- Fallback en caso de error -->
+        <link href="{% static 'css/main.css' %}" rel="stylesheet" type="text/css">
+    {% endif %}
 </head>
 <body>
     <noscript>Necesitas habilitar JavaScript para ejecutar esta aplicación.</noscript>
     
     <div id="root"></div>
     
-    <!-- JavaScript de React con hash de producción -->
-    <script src="{% static 'js/main.824999e9.js' %}" type="application/javascript"></script>
+    <!-- JavaScript de React - DINÁMICO: se actualiza automáticamente -->
+    {% if react_js %}
+        <script src="{% static react_js %}" type="application/javascript"></script>
+    {% else %}
+        <!-- Fallback en caso de error -->
+        <script src="{% static 'js/main.js' %}" type="application/javascript"></script>
+    {% endif %}
+    
+    <!-- Debug info (solo en desarrollo) -->
+    {% if debug %}
+        <!-- Assets cargados: CSS={{ react_css }}, JS={{ react_js }} -->
+    {% endif %}
 </body>
 </html>
